# rust-nix-demo-cli

./: Cargo.toml  README.md  flake.nix
src/: main.rs
