[package]
name = "rust-nix-demo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
color-eyre = "0.6.2"
ferris-says = "0.3.1"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }

[package.metadata.nix]
build = true
